<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/sixTeenDp"
    android:layout_marginEnd="@dimen/sixTeenDp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/sixTeenDp"
        android:layout_marginEnd="@dimen/sixTeenDp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fortyDp"
            android:src="@drawable/close_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            style="@style/signupStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fortyDp"
            android:text="@string/signupText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivClose"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:drawableStart="@drawable/profile"
            android:drawablePadding="@dimen/sixTeenDp"
            android:hint="@string/firstNameText"
            android:paddingEnd="@dimen/twentyDp"
            app:layout_constraintEnd_toStartOf="@id/etLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:hint="@string/lastNameText"
            android:paddingStart="@dimen/twentyDp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etFirstName"
            app:layout_constraintTop_toBottomOf="@id/tvSignUp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:drawableStart="@drawable/email_icon"
            android:drawablePadding="@dimen/sixTeenDp"
            android:hint="@string/emailHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etFirstName" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:drawableStart="@drawable/phone_icon"
            android:drawablePadding="@dimen/sixTeenDp"
            android:hint="@string/phoneNumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="@dimen/sixTeenDp"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPhone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:drawableStart="@drawable/password"
            android:drawablePadding="@dimen/sixTeenDp"
            android:hint="@string/confirmPasswordText"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tenDp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGuidlines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:paddingStart="@dimen/tenDp"
            android:text="@string/tvTextGuidlines"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:paddingStart="@dimen/tenDp"
            android:text="@string/tvterms"
            android:textColor="@color/blue"
            app:layout_constraintStart_toEndOf="@+id/tvGuidlines"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
         />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twentyDp"
            android:text="@string/tvGuid"
            android:textColor="@color/black"
            android:paddingStart="@dimen/sixTeenDp"
            app:layout_constraintStart_toEndOf="@id/tvTerms"
            app:layout_constraintTop_toBottomOf="@id/etConfirmPassword"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPolicies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvpolicies"
            android:textColor="@color/blue"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvTerms"
            app:layout_constraintTop_toBottomOf="@id/tvTerms" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fortyDp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/btContinue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPolicies" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>



